--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.1",
     "@react-navigation/native": "^5.8.9",
+    "@react-navigation/stack": "^5.12.6",
     "axios": "^0.21.0",
     "moment": "^2.29.1",
     "react": "16.13.1",
