--- a/ios/GetId/Info.plist
+++ b/ios/GetId/Info.plist
@@ -39,6 +39,8 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>$(PRODUCT_NAME) would like access to your photo gallery (For Upload your photo)</string>
   <key>UIAppFonts</key>
   <array>
     <string>Poppins-BlackItalic.ttf</string>
