--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
+    "moment-with-locales-es6": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.3",
