--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
       android:icon="@mipmap/ic_getid"
       android:roundIcon="@mipmap/ic_getid_round"
       android:allowBackup="false"
+      android:networkSecurityConfig="@xml/network_security_config"
       android:theme="@style/AppTheme">
       <activity
         android:name=".MainActivity"
