--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
+    "react-native-sha256": "^1.3.6",
     "react-native-vector-icons": "^7.1.0",
+    "react-native-webview": "^11.0.3",
     "react-redux": "^7.2.2",
     "react-xml-parser": "^1.1.8",
     "redux": "^4.0.5",
